add and update grpc service
